# DeltaCalibration

./: .directory  .gitignore  CMakeLists.txt  InstallPackages  InstallResearchPackages  Makefile  README.md  README.txt  errorMetrics  manifest.xml  merge_deltas.sh  record_setup.launch  test_delta_calibration.sh  tf_broadcaster.py
brass_cal/: 0.00016195_0.17453_1_0_0_0_rot.txt  0.00016195_0.17453_1_0_0_0_trans.txt  0.0003239_0.17453_1_0_0_0_rot.txt  0.0003239_0.17453_1_0_0_0_trans.txt  0.00048586_0.17453_1_0_0_0_rot.txt  0.00048586_0.17453_1_0_0_0_trans.txt  0.00092792_1_0_0_0_0_rot.txt  0.00092792_1_0_0_0_0_trans.txt  0.0018558_1_0_0_0_0_rot.txt  0.0018558_1_0_0_0_0_trans.txt  0.0027838_1_0_0_0_0_rot.txt  0.0027838_1_0_0_0_0_trans.txt  0.0053166_0_3_0_0_0_rot.txt  0.0053166_0_3_0_0_0_trans.txt  0.010633_0_3_0_0_0_rot.txt  0.010633_0_3_0_0_0_trans.txt  0.01595_0_3_0_0_0_rot.txt  0.01595_0_3_0_0_0_trans.txt  0.030462_0_2_0_0_0_rot.txt  0.030462_0_2_0_0_0_trans.txt  0.060923_0_2_0_0_0_rot.txt  0.060923_0_2_0_0_0_trans.txt  0.091385_0_2_0_0_0_rot.txt  0.091385_0_2_0_0_0_trans.txt  0.17453_0_1_0_0_0_rot.txt  0.17453_0_1_0_0_0_trans.txt  0.34907_0_1_0_0_0_rot.txt  0.34907_0_1_0_0_0_trans.txt  0.5236_0_1_0_0_0_rot.txt  0.5236_0_1_0_0_0_trans.txt  0_0.0053166_3_0_0_0_rot.txt  0_0.0053166_3_0_0_0_trans.txt  0_0.010633_3_0_0_0_rot.txt  0_0.010633_3_0_0_0_trans.txt  0_0.01595_3_0_0_0_rot.txt  0_0.01595_3_0_0_0_trans.txt  0_0.030462_2_0_0_0_rot.txt  0_0.030462_2_0_0_0_trans.txt  0_0.030462_2_0_0_1_rot.txt  0_0.030462_2_0_0_1_trans.txt  (+52170 more)
scripts/: .directory
scripts/matlab_scripts/delta_calibration/: A1toA2.m  AddNoiseToTransform6D.m  InverseTransform6D.m  ProcessTrajectory.m  RandomGroundTranslation.m  RandomGroundTranslation6D.m  RandomRotationAA.m  RandomTransform6D.m  RandomTranslation.m  RandomUncertaintyNormal.m  RandomXRotationAA.m  RandomYRotationAA.m  RandomZAxisRotate.m  RandomZRotationAA.m  StripRotation.m  StripTranslation.m  StripTranslation.m~  calcError.m  calibrate.m  calibrate_data.m  calibrate_rotWtrans.m  calibrate_rotWtrans.m~  calibrate_turtlebot.m  calibrate_turtlebot.m~  deltaParameterTest.m  euler2rot.m  genBrassCal.m  genGraphs.m  genTest.m  genTestCal.m  genTestPartialCal.m  genTestPartialCal.m~  genTestTurtlebotCal.m  generated_deltas.txt  posesFromFile.m  rotation1.pose  rotation1.txt  rotation2.pose  rotation2.txt  rotation_combined.pose  (+8 more)
scripts/matlab_scripts/delta_calibration/test/: deltaTest.m  randomPose.m  test_manual_icp.m  test_manual_icp_copy.m  testing.m  testing.matlab  transformFit.m  translate.m
scripts/matlab_scripts/delta_calibration/utils/: M1FromQuat.m  M2FromQuat.m  aa2quat.m  aa2rotm.m  quat2aa.m  quat2aa_wxyz.m  quat2rotm.m  quat2rotm_xyzw.m  quatmult.m  rotm2aa.m  rotm2quat.m
src/: .directory
src/delta_calibration/: .directory  .test_normals.cpp.kate-swp  CMakeLists.txt  CheckTransform.cpp  CheckTransform_color.cpp  CheckTransform_overlap.cpp  LiveTransform.cpp  calibration_watcher.cpp  check_transform.cpp  condition_testing.cpp  delta_calc.h  delta_calculate.cpp  delta_calibrate.cpp  delta_calibration.cpp  find_z.cpp  icp.cpp  icp.h  keyframe_test.cpp  obj_icp.cpp  obj_transform.cpp  package.xml  partial_calibrate.cpp  partial_calibrate.h  post_processing.cpp  post_processing.moc  record_turtlebot_data.cpp  slam_calibration.cpp  test_calibrate.cpp  test_delta_cal.cpp  test_normals.cpp  test_turtlebot_calibrate.cpp  visualize_poses.cpp
src/delta_calibration/old_files/: check_transform.cpp  condition_testing.cpp  contains_sanitize.cpp  gmapping_demo.launch  visualize_poses.cpp
src/fspf/: grahams_scan.cpp  grahams_scan.h  plane_filtering.cpp  plane_filtering.h  plane_polygon.cpp  plane_polygon.h
src/perception_tools/: perception_2d.cpp
src/vector_localization/: non_markov_localization.h  non_markov_localization_main.cpp  object_map.cpp  object_map.h  residual_functors.h
